tests/algorithms/x/Clojure/physics/malus_law.out
Syntax error compiling at (/workspace/mochi/tests/algorithms/x/Clojure/physics/malus_law.clj:44:50).
Unable to resolve symbol: floor in this context

Full report at:
/tmp/clojure-6770542629416703935.edn